public/css/irn.css
/*
 * Originally adapted from Poole and Hyde stylesheets by @mdo
 * (no longer bears much resemblance)
 */

/* Contents
 *
 * Base
 * Code
 * Quotes
 * Posts and pages
 * Anchor links
 * Categories
 * TOC
 * Footnotes
 * Admonitions
 * Spoilers
 */

/*
 * Base
 */

body {
  /* white on black saves electricity */
  color: white;
  background-color: black;
  font-family: Hack, Consolas, Menlo, Monaco, "Source Code Pro", monospace;
  font-size: 24px;                              /* older navigators */
  font-size: 1.5rem;                            /* newer */
  font-size: calc(1rem + 0.75vw);               /* even newer */
  @supports (font-size: clamp(1em, 1vw, 1em)) { /* even even newer */
    font-size: clamp(0.875rem, 1em + 0.75vw, 3rem);
    /* I don't know if testing @supports is needed */
  }
}

/* different font for headings which i think is considered good design? */
h1, h2, h3, h4, h5, h6 {
  font-family: sans-serif, serif;
  color: darkseagreen;
}

/* no underline in headers anchor link */
h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
  text-decoration: none;
}

/* smaller headings because i find large ones obnoxious, like the
   people who use h1 for every single heading on their github readmes
   */
h1 {
  font-size: inherit;
  counter-reset: the-section;
}
h2, h3, h4, h5, h6 {
  font-size: inherit;
}
h1::before {
  content: '# ';
}
h2::before {
  content: '## ';
}
h3::before {
  content: '### ';
}
h4::before {
  content: '#### ';
}
h5::before {
  content: '##### ';
}
h5::before {
  content: '###### ';
}

/* blue on black looks bad */
a {
  color: yellow;
}

/* ascii art logo */
#hack pre {
  background-color: black;
  color: red;
  margin: 0;
  padding: 0;
  white-space: pre;
  overflow-x: auto;
}

/*
 * Code
 */

code,
pre {
  font-family: Consolas, Menlo, Monaco, "Courier New", monospace;
}
code {
  margin: 0;
  padding: .2em .4em;
  color: #ddd;
}
pre {
  display: block;
  margin-top: 0;
  margin-bottom: 1rem;
  padding: 1rem;
  line-height: 1.4;
  white-space: pre;
  white-space: pre-wrap;
  word-break: break-all;
  word-wrap: break-word;
}
pre code {
  padding: 0;
  font-size: 100%;
  color: inherit;
  background-color: transparent;
}

/* Pygments via Jekyll */
.highlight {
  margin-bottom: 1rem;
}
.highlight pre {
  margin-bottom: 0;
  color: #ddd;
}

/* Visible block with max height, kind of like SE */
/* to avoid long code blocks being annoying to scroll past */
.highlighter-rouge div {
  max-height: 600px;
  overflow: auto;
  max-width: 92%;
  margin: auto;
  border: 1px inset green;
}

/* Don't wrap plaintext (to avoid breaking ascii art) */
.language-plaintext pre {
  white-space: pre;
  overflow-x: auto;
}

/* Do wrap inline code (like stuff between single grave) */
code.language-plaintext {
  white-space: pre-wrap;
  word-break: break-all;
  word-wrap: break-word;
}

/* Different font on braille blocks to avoid displaying the grid */
.language-braille {
  font-family: "Adwaita Mono", "Courier New", Iosevka, monospace;
  /* Don't word wrap */
  white-space: pre;
  overflow-x: auto;
  /* Required for overflow-x auto */
  display: block;
}

/* Gist via GitHub Pages */
.gist .gist-file {
  font-family: Menlo, Monaco, "Courier New", monospace !important;
}
.gist .markdown-body {
  padding: 15px;
}
.gist pre {
  padding: 0;
  background-color: transparent;
}
.gist .gist-file .gist-data {
  font-size: .8rem !important;
  line-height: 1.4;
}
.gist code {
  padding: 0;
  color: inherit;
  background-color: transparent;
  border-radius: 0;
}

/*
 * Quotes
 */

blockquote {
  padding: 0 1rem;
  margin: .8rem 0;
  color: #bbb;
  border-left: .25rem solid #bbb;
}
blockquote p:last-child {
  margin-bottom: 0;
}

/*
 * Posts and pages
 *
 * Each post is wrapped in `.post` and is used on default and post layouts. Each
 * page is wrapped in `.page` and is only used on the page layout.
 */

/* Meta data line below post title */
.post-date {
  display: block;
  margin-top: 0.5rem;
  margin-bottom: 1rem;
  color: #9a9a9a;
}

/*
 * Anchor links
 */

a.anchorjs-link {
  content: counter(the-section) ".\2002" !important;
  /* position: absolute; */
  /* margin-left: -1em; */
}

a.anchorjs-link::before {
  counter-increment: the-section;
  content: counter(the-section) ".\2002";
}

a.anchorjs-link:hover,
a.anchorjs-link:focus {
  background: transparent;
  text-decoration: none;
  color: var(--color-stark);
}

/*
 * Categories
 */

.cats-container, .lang-box {
  display: inline-block;
  margin-left: 0.5rem;
}

.cat, .lang {
  border-radius: 0.3em;
  color: green !important;
  border: 1px solid green;
  display: inline-block;
  margin: 0.3em 0.3em 0.3em 0;
  padding: 0 0.3em 0 0.3em;
  pointer-events: none;
}

/*
 * TOC
 */

.toc {
  display: table;
  padding: 7px;
  font-size: 95%;
  margin: 0 0 1em 1em;
}

.toc ul {
  list-style: none;
  margin: 0.3em 0;
  padding: 0;
  counter-reset: toc-section;
}

.toc ol {
  margin: 0.3em 0;
  padding: 0 0 0 1.5em;
}

.toctitle {
  text-align: center;
}

.tocnumber {
  padding-right: 0.5em;
}

.toc li a::before {
  counter-increment: toc-section;
  content: counter(toc-section) ".";
  padding-right: 0.5em;
}

.toctogglecheckbox:not(:checked) + .toctitle .toctogglelabel::after {
  content: 'hide';
}

.toctogglecheckbox:checked + .toctitle .toctogglelabel::after {
  content: 'show';
}

:not(:checked) > .toctogglespan::before {
  content: ' [';
}

:not(:checked) > .toctogglespan::after {
  content: ']';
}

.toctogglelabel {
  cursor: pointer;
}

.toctogglelabel:hover {
  text-decoration: underline;
}

.toctogglecheckbox:checked ~ ul, .toctogglecheckbox:checked ~ ol {
  display: none;
}

/*
 * Footnotes
 */

.footnote::before {
  content: "[";
}

.footnote::after {
  content: "]";
}

/*
 * Admonitions
 */

.admonition-title {
  font-weight: bold;
  display: inline;
  padding: 2px 10px;
  margin: 0px 4px 0px -10px;
  color: #fff;
}

.admonition {
  padding: 0 1rem;
  margin: .8rem 0;
  border-left: .25rem solid #515151;
}

.admonition-title:before {
    margin-right: 0.5rem;
    display: inline-block;
    font-style: normal;
    font-size: large;
    font-weight: 400;
    line-height: 1;
    text-decoration: inherit;
    content: "🛈";
}

.admonition blockquote {
  padding: 0;
  margin: 0;
  color: inherit;
  border-left: none;
}

/* note */
.admonition.note .admonition-title {
  color: #1f6feb;
}
.admonition.note {
  border-left: .25em solid #1f6feb;
}

/* aside */
.admonition.aside .admonition-title {
  color: grey;
}
.admonition.aside {
  border-left: .25em solid grey;
}

/* attention */
.admonition.attention .admonition-title {
  color: #f0b37e;
}
.admonition.attention {
  border-left: .25em solid #f0b37e;
}

/* todo */
.admonition.todo .admonition-title {
  color: #c8d7d9;
}
.admonition.todo {
  border-left: .25em solid #c8d7d9;
}

/*
 * Spoilers
 */

.spoiler {
  color: grey;
  background-color: grey;
}

.spoiler:hover, .spoiler:focus, .spoiler:active {
  color: black;
}

